--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,7 +2,21 @@
 
 
 
+html,
+body,
+#root {
+  width: 100%;
+}
 
+#map {
+  width: 100%;
+  height: 100%;
+  position:absolute;
+  left:0;
+  top:0;
+  margin:0;
+  padding:0;
+}
 
 
 :root {
@@ -35,7 +49,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  
 }
+
 
 h1 {
   font-size: 3.2em;
